# ingestionator

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  config.py  config.yaml  error_handling.py  factories.py  main.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  secret_manager.py
.github/workflows/: ci.yml
ingestionator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ingestors/: __init__.py  base.py  csv.py  parquet.py
sources/: __init__.py  base.py  local.py  s3.py
targets/: __init__.py  base.py  duckdb.py  snowflake.py
tests/: test_config.py  test_ingestors.py  test_integration.py  test_pipeline.py  test_secret_manager.py  test_sources.py  test_targets.py
